--- a/css/style-660.css
+++ b/css/style-660.css
@@ -1,5 +1,10 @@
 @media (min-width: 640px) {
 
+  h1{
+    margin: 2rem;
+    font-size: 2.2rem;
+  }
+
   .c1{
     width: 126px;
     transform: translate(-217px, 2px);
