--- a/css/style-850.css
+++ b/css/style-850.css
@@ -1,5 +1,10 @@
 @media (min-width: 850px) {
 
+  h1{
+    margin: 2.4rem;
+    font-size: 2.6rem;
+  }
+  
   .c1{
     width: 146px;
     transform: translate(-237px, 2px);
