--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,15 @@ html{
   background-color: #1f5780;
 }
 
+
+h1{
+  color: #fff;
+  margin: 1.2rem;
+  font-weight: lighter;
+  font-style: italic;
+  font-size: 1.8rem;
+}
+
 .c{
   display: block;
   position: absolute;
